--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,7 @@ Copyright (C) 2011 - 2014 Holger Nahrstaedt
 Copyright (C) 2005-2008 Scilab Wavelet Toolbox Team
 __________________________________________________________________
 0.3.1
- + some bug fixes
+ + some bug fixes (Thanks to Pingmin)
 0.3.0
  + Works with Scilab 6.0
  + new and more accurate Daubechies wavelets coefficents - thanks to Bob Strunz 
